# orm

./: .gitignore  README.md  pyproject.toml
orm/: orm.py  types.py
orm/database/: database.py  lib.py  postgresql.py
orm/query_builder/: query.py  statements.py
orm/table/: table.py
tests/: column_test.py  database_test.py  query_builder_test.py  table_creation_test.py  test_database.py
