[tool.poetry]
name = "orm"
version = "0.1.0"
description = ""
authors = ["Giovanni Elias  <giovannielias9500@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.6"
pydantic = "2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
